--- a/app/src/main/res/layout/activity_simple3.xml
+++ b/app/src/main/res/layout/activity_simple3.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<sing.MaterialRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<sing.MaterialRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:isLoadMore="true"
     app:overlay="true"
     app:progress_colors="@array/material_colors"
-    app:progress_size_type="normal"
     app:wave_color="#90ffffff"
-    app:wave_height_type="normal"
+    android:background="#E5E5E5"
+    app:wave_height_type="higher"
     app:wave_show="true">
 
     <android.support.v7.widget.RecyclerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent" />
 </sing.MaterialRefreshLayout>
