--- a/app/src/main/res/layout/activity_scrollview.xml
+++ b/app/src/main/res/layout/activity_scrollview.xml
@@ -1,75 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<sing.MaterialRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/refresh"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:overlay="false"
-    app:progress_backgroud_color="#FFFAFAFA"
-    app:progress_colors="@array/material_colors"
-    app:progress_show_arrow="true"
-    app:progress_show_circle_backgroud="true"
-    app:wave_color="#60ff2020"
-    app:wave_height_type="normal"
-    app:wave_show="true">
+    android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/simple1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="45dp"
+            android:text="侵入式下拉刷新"
+            android:textColor="#313131" />
 
-            <Button
-                android:id="@+id/simple"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#ff2020"
-                android:onClick="onClick"
-                android:text="simple"
-                android:textColor="#fff"/>
+        <Button
+            android:id="@+id/simple2"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="非侵入下拉刷新"
+            android:textColor="#313131" />
 
-            <Button
-                android:id="@+id/wave"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#ff2020"
-                android:onClick="onClick"
-                android:text="wave"
-                android:textColor="#fff"/>
+        <Button
+            android:id="@+id/simple3"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="侵入式+波浪背景"
+            android:textColor="#313131" />
 
-            <Button
-                android:id="@+id/rv"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#ff2020"
-                android:onClick="onClick"
-                android:text="loadMore"
-                android:textColor="#fff"/>
+        <Button
+            android:id="@+id/simple4"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="非侵入式+波浪背景"
+            android:textColor="#313131" />
 
-            <Button
-                android:id="@+id/lv"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#ff2020"
-                android:onClick="onClick"
-                android:text="autoFresh"
-                android:textColor="#fff"/>
-        </LinearLayout>
-    </ScrollView>
-</sing.MaterialRefreshLayout>
+        <Button
+            android:id="@+id/simple5"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="加载更多"
+            android:textColor="#313131" />
+
+        <Button
+            android:id="@+id/simple6"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="自动下拉刷新"
+            android:textColor="#313131" />
+
+        <Button
+            android:id="@+id/simple7"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="自动上拉刷新"
+            android:textColor="#313131" />
+    </LinearLayout>
+</ScrollView>
